@@ -1,0 +1,16 @@
+# Tags:
+_cod_depositor_comments
+
+# Changelog value:
+
+This is previous changelog message.
+It contains important information.
+
+Name Surname
+
+The following automatic conversions were performed:
+
+This is a new changelog message.
+
+Automatic conversion script
+
