@@ -7,6 +7,10 @@ cod-tools (unreleased)
     - COD::CIF::Tags::Print:
         - homogenised the formatting of long lines in
           the print_single_tag_and_value() subroutine.
+    - COD::CIF::ChangeLog:
+        - updated the append_changelog_to_single_item() subroutine
+          to properly create the changelog data item if it does not
+          yet exist in the data block.
 
 cod-tools (3.4.0)
 
